src/qlik-multi-kpi.less
.qv-object-qsstatistic {
  width: 100%;
  height: 100%;
  &.edit-mode{
    overflow-y: hidden
  }
}
.qv-object-qsstatistic {
  /*
    start semantic-ui modules
    * # Semantic UI - 2.1.2 (modified by https://github.com/alner)
    * https://github.com/Semantic-Org/Semantic-UI
    * http://www.semantic-ui.com/
    *
    * Copyright 2014 Contributors
    * Released under the MIT license
    * http://opensource.org/licenses/MIT

    The following 3 modules from semantic-ui are used:
      definitions/views/card.less
      definitions/views/statistics.less
      definitions/elements/segment.less
  */
  @import "../semantic/src/definitions/views/card.less";
  @import "../semantic/src/definitions/views/statistic.less";
  @import "../semantic/src/definitions/elements/segment.less";
  // end semantic-ui modules

  * {
    box-sizing: border-box;
  }

  .infographic-icon-set-wrapper {
    line-height: 0; // hack to offset height from 4rem font-size from semantic-ui
  }

  .ui.statistics{
    div.value >span{
      font-size: 3rem
    }
    &.mini{
      div.value >span{
        font-size: 1rem;
      }
    }
    &.tiny{
      div.value >span{
        font-size: 2rem;
      }
    }
    &.normal{
      div.value >span{
        font-size: 4rem
      }
    }
    &.large{
      div.value >span{
        font-size: 5rem
      }
    }
    &.huge{
      div.value >span{
        font-size: 6rem
      }
    }
  }
  .top-aligned-items {
    height: 100%;
    display: flex;
    align-items: flex-start;
  }

  .bottom-aligned-items {
    height: 100%;
    display: flex;
    align-items: flex-end;
  }

  .center-aligned-items {
    height: 100%;
    display: flex;
    align-items: center;
  }

  .stretched-items {
    height: 100%;
    display: flex;
    align-items: stretch;
  }

  .ui.statistics, .ui.cards, .ui.segments  {
    width: 100%;
  }

  .ui.vertical.segments,
  .ui.horizontal.segments {
    height: 100%;
  }

  @media (max-width: 767px) {
    .ui.cards {
      height: 100%;
    }
  }

  .ui.statistics .statistic > .label,
  .ui.statistic > .label {
    text-transform: none;
  }
  .ui.statistic > .value {
    width: 100%;
  }

  .ui.segment > .label[class*="center aligned"] {
    text-align: center;
  }
  .ui.center.aligned.statistics > div > div > div > .value,
  .ui.center.aligned.statistics > div > div > div > .label{
    text-align: center !important;
  }
  .ui.segments, .ui.segment {
    background-color: transparent !important;
  }
  .value--icon--wrapper{
    display: inline-block;
    position: relative;
    margin: 8px;
    bottom: 0;
    &.infographic{
      margin: 10px 0;
    }
  }
  .value--icon--wrapper.on-value{
    display: inline-block;
    position: relative;
    margin: 8px;
    bottom: 0px;
    &.infographic{
      margin: 10px 0 ;
    }
  }
  .ui.statistics .statistic > .value,
  .ui.statistic > .value {
    text-transform: none;
    box-sizing: border-box;
  }

  .ui.cards {
    margin: 0 !important;
    align-items: center;
    justify-content: center;
    height: 100%;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  .ui.cards, .ui.segments{
    &.edit-mode{
      overflow: hidden;
    }
  }
  .ui.cards > .card,
  .ui.card {
    padding: 0 10px;
    -ms-flex: 1;
    flex: 1;
    white-space: nowrap;
    background-color: transparent !important;
    -ms-flex-preferred-size: 20%;
    min-width: 150px;

  }

  .ui.tag.label {
    font-size: 0.5em !important;
  }

  .ui.button {
    cursor: pointer;
    display: inline-block;
    min-height: 1em;
    outline: 0;
    border: none;
    vertical-align: baseline;
    background: #fff;
    color: rgba(0,0,0,.87);
    font-family: icons,'Helvetica Neue',Arial,Helvetica,sans-serif;
    margin: 0 0 1rem;
    padding: 1em;
    text-transform: none;
    text-shadow: none;
    font-weight: 700;
    line-height: 1.4285em;
    font-style: normal;
    text-align: center;
    text-decoration: none;
    border-radius: .28571429rem;
    box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    transition: 'default';
    will-change: '';
    -webkit-tap-highlight-color: transparent;
  }

  .ui.mini.button, .ui.mini.buttons .button, .ui.mini.buttons {
    font-size: .71428571em;
  }

  .ui.icon.button, .ui.icon.buttons .button {
    padding: 1em;
  }

  .ui.icon.button>.icon, .ui.icon.buttons .button>.icon {
    opacity: .9;
    margin: 0;
    vertical-align: top;
  }

  .ui.segments, .ui.cards {
    overflow: auto;

    .ui.segment, .ui.card {
      display: flex;
      flex-direction: column;
      min-width: 150px;
      min-width: fit-content !important;
      padding: 0;
      a{
        font-size: 16px;
      }

      .ui.statistics{
        display: block;
      }
      >.label {
        display: block;
        padding: 10px 5px;
        border-bottom: solid 1px rgb(166,166,166) !important;
        box-sizing: content-box;
      }

      >.statistics {
        padding: 1em;
        box-sizing: border-box;
      }

      &.is-selected > .label {
        background-color: #52cc52;
        color: rgb(255,255,255);
      }

      // labels positioning
      .bottom {
        border-bottom: none;
        border-top: 1px solid #a6a6a6;
        order: 2;
      }
      .bottom.left {
        border-bottom: none;
        border-top: 1px solid #a6a6a6;
        order: 2;
        text-align: left;
      }
      .bottom.right {
        border-bottom: none;
        border-top: 1px solid #a6a6a6;
        order: 2;
        text-align: right;
      }
      .top {
        border-top: none;
        border-bottom: 1px solid #a6a6a6;
      }
      .top.right {
        border-top: none;
        border-bottom: 1px solid #a6a6a6;
        text-align: right;
      }
      .top.left {
        border-top: none;
        border-bottom: 1px solid #a6a6a6;
        text-align: left;
      }
      // labels sizing
      .mini {
        font-size: xx-small;
      }
      .tiny {
        font-size: x-small;
      }
      .small {
        font-size: small;
      }
      .normal {
        font-size: 19px;
      }
      .large {
        font-size: x-large;
      }
      .huge {
        font-size: xx-large;
      }
    }
  }
}

